# LLM-tool-calling

./: .gitignore  demo.ipynb  launch_vllm.py  openai.ipynb  pyproject.toml
example_code/eval/: combined_dataset_full.jsonl  count_tokens.ipynb  eval.ipynb  eval.py  get_combined_data.ipynb  grader.py  grader_async.py  student_outputs_run1.jsonl  student_outputs_run10.jsonl  student_outputs_run14.jsonl  student_outputs_run15.jsonl  student_outputs_run3.jsonl  student_outputs_run4.jsonl  student_outputs_run5.jsonl  student_outputs_run6.jsonl  student_outputs_run7.jsonl  student_outputs_run8.jsonl  student_outputs_run9.jsonl
example_code/eval/eval_results_run1/: test_student_metrics_full.json  test_student_results_full.jsonl
example_code/eval/eval_results_run10/: test_student_metrics_full.json  test_student_results_full.jsonl
example_code/eval/eval_results_run14/: test_student_metrics_full.json  test_student_results_full.jsonl
example_code/eval/eval_results_run15/: test_student_metrics_full.json  test_student_results_full.jsonl
example_code/eval/eval_results_run3/: test_student_metrics_full.json  test_student_results_full.jsonl
example_code/eval/eval_results_run4/: test_student_metrics_full.json  test_student_results_full.jsonl  tmp.json
example_code/eval/eval_results_run5/: med.jsonl  test_student_metrics_full.json  test_student_results_full.jsonl
example_code/eval/eval_results_run6/: test_student_metrics_full.json  test_student_results_full.jsonl
example_code/request/: batch_arrivals_pretty.json  generate_simulation.py  make_requests.py
(+361 files in other folders)
