[project]
name = "tool-calling-test"
version = "0.1.0"
#description = "Add your description here"
#readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "aiometer==1.*",
    "datasets>=4.4.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "litellm>=1.80.9",
    "math-verify>=0.8.0",
    "matplotlib>=3.10.8",
    "openai-function-calling>=2.6.0",
    "python-dotenv>=1.2.1",
    "termcolor>=3.2.0",
    "torch>=2.9.0",
    "transformers>=4.57.3",
    "vllm>=0.12.0",
    "wandb>=0.23.1",
]
